# dokuwiki-dumper

./: .gitignore  DEV.md  README.md  dokuwikidump.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
dokuWikiDumper/: __init__.py  __main__.py  __version__.py  exceptions.py  version.py  version_check.py
dokuWikiDumper/dump/: dokuDumper.py  doku_dumper.py
dokuWikiDumper/dump/content/: __init__.py  content.py  revisions.py  titles.py
dokuWikiDumper/dump/html/: __init__.py  html.py
dokuWikiDumper/dump/info/: __init__.py  info.py
dokuWikiDumper/dump/media/: __init__.py  media.py
dokuWikiDumper/dump/pdf/: __init__.py  pdf.py
dokuWikiDumper/utils/: config.py  delay.py  dump_lock.py  ia_checker.py  patch.py  session.py  test_util.py  util.py
dokuWikiScraper/: __init__.py  __main__.py  dokudumper.py
dokuWikiScraper/dump/: dokuDumper.py
dokuWikiScraper/dump/content/: __init__.py  revisions.py
dokuWikiScraper/dump/media/: __init__.py  media.py
dokuWikiScraper/utils/: session.py  util.py
dokuWikiUploader/: __main__.py  __version__.py  uploader.py
