[tool.poetry]
name = "dokuWikiDumper"
version = "0.1.48"
description = "A tool for archiving DokuWiki"
authors = ["yzqzss <yzqzss@yandex.com>"]
license = "GPL-3.0"
readme = "README.md"

packages = [
    { include = "dokuWikiDumper/**/*" },
    { include = "dokuWikiUploader/**/*" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/saveweb/dokuwiki-dumper/issues"
"repository" = "https://github.com/saveweb/dokuwiki-dumper/"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
internetarchive = "^5.4.0"
rich = "^14.0.0"
python-slugify = "^8.0.4"
typing-extensions = "^4.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
dokuWikiDumper = "dokuWikiDumper:main"
dokuWikiUploader = "dokuWikiUploader:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
